- publishers crud işlemleri tamamlandı

--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -80,6 +80,14 @@
 					</a>
 				</li>
 
+        		<li>
+					<a href="<%= routes.adminPublishers %>">
+						<div class="parent-icon"><i class='bx bx-cookie'></i>
+						</div>
+						<div class="menu-title">Yayıncılar</div>
+					</a>
+				</li>
+
 				<li>
 					<a href="javascript:;" class="has-arrow">
 						<div class="parent-icon">
@@ -487,7 +495,6 @@
 				$('#deleteModal .modal-body').text(categoryName);
 				$('#deleteModal form').attr('action', $(this).data('route'));
 			});
-
 		});
 	</script>
 
