--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -88,18 +88,12 @@
 					</a>
 				</li>
 
-				<li>
-					<a href="javascript:;" class="has-arrow">
-						<div class="parent-icon">
-              <i class='bx bx-home-alt'></i>
+        		<li>
+					<a href="<%= routes.adminProducts %>">
+						<div class="parent-icon"><i class='bx bx-cookie'></i>
 						</div>
-						<div class="menu-title">Dashboard</div>
+						<div class="menu-title">Ürünler</div>
 					</a>
-					<ul>
-						<li>
-              <a href="index3.html"><i class='bx bx-radio-circle'></i>Graphical</a>
-						</li>
-					</ul>
 				</li>
 			</ul>
 			<!--end navigation-->
